examples/test/testpolicy500.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy500
  namespace: namespace136
spec:
  podSelector:
    matchLabels:
      key42: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value1
          key40: value30
          key27: value6
      podSelector:
        matchLabels:
          key1: value25
